--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,9 @@
-- admin pagina
-    - activiteit aanmaken/wijzigen/verwijderen
-    - lijst van ingeschreven mensen per activiteit
-    - lijst van gebruikers met geschiedenis van userinfo
 - email-verificatie vereist maken voor inschrijven:
-    - https://stackoverflow.com/questions/50223818/firebase-firestore-security-rules-allow-if-email-verified-without-custom-tok
     - https://firebase.google.com/docs/reference/security/database/#authtoken
-- activiteiten sorteren op datum
-- styling
 - security regels
     - https://firebase.google.com/docs/reference/security/database#-_negate_or_subtract
-- cronjobs (daily)
+- cronjobs (daily) / admin jobs
     - delete past activities (older than a month)
     - delete deleted accounts without past activities
-- code verbeteren
+- code verbeteren? (naming, promise chaining)
 - terug naar hosten op github? (om alle firebase sources op één plek te houden)
-
-
